test/Serialization/macros.code
// REQUIRES: language_language_parser, asserts

// RUN: %empty-directory(%t)
// RUN: %empty-directory(%t-scratch)
// RUN: %host-build-language -emit-library -o %t/%target-library-name(MacroDefinition) -module-name=MacroDefinition %S/Inputs/def_macro_plugin.code -g -no-toolchain-stdlib-rpath
// RUN: %target-language-frontend -emit-module -o %t/def_macros.codemodule %S/Inputs/def_macros.code -module-name def_macros -load-plugin-library %t/%target-library-name(MacroDefinition)
// RUN: %target-language-frontend -typecheck -I%t -verify %s -verify-ignore-unknown  -load-plugin-library %t/%target-library-name(MacroDefinition)
// RUN: toolchain-bcanalyzer %t/def_macros.codemodule | %FileCheck %s
// RUN: %target-language-ide-test(mock-sdk: %clang-importer-sdk) -print-module -module-to-print=def_macros -I %t -source-filename=%s | %FileCheck -check-prefix=CHECK-PRINT %s

import def_macros

fn test(a: Int, b: Int) {
  _ = #publicStringify(a + b)
  _ = #publicStringify(a + b, label: "hello")
  _ = #unlabeledStringify(a + b)

  _ = #internalStringify(a + b)
  // expected-error@-1{{no macro named 'internalStringify'}}
}

struct TestStruct {
  @myWrapper var x: Int
  // expected-error@-1{{expansion of macro 'myWrapper()' did not produce a non-observing accessor (such as 'get') as expected}}
}

@ArbitraryMembers
struct OtherTestStruct {
}

// CHECK: MACRO_DECL

// CHECK-NOT: UnknownCode

// CHECK-PRINT-DAG: macro macroWithBuilderArgs(@Builder _: () -> Void)
